--- a/next-app/src/styles/main.scss
+++ b/next-app/src/styles/main.scss
@@ -1,10 +1,17 @@
 .link-group {
-	p {
+  p {
     margin-top: 24px;
     margin-bottom: 24px;
 
     &:hover {
       cursor: pointer;
     }
+  }
+}
+
+.actual-input {
+  input {
+    font-size: 1.875rem;
+    text-align: center;
   }
 }
